edit/publish service + router loader refactor
